--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -21,6 +21,7 @@ seaborn>=0.9.0
 reno>=3.4.0
 Sphinx>=3.0.0
 qiskit-sphinx-theme>=1.6
+qiskit-toqm>=0.0.4;platform_machine != 'aarch64' or platform_system != 'Linux'
 sphinx-autodoc-typehints<1.14.0
 jupyter-sphinx
 sphinx-panels
